--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="wrapper">
-      <div class="header"> Contacts </div>
+      <div class="header"> Contactss </div>
       <div id="root"></div>
     </div>
 
